# rock-paper-scissors-lizard-spock

./: .gitignore  CMakeLists.txt  README.md  matches.txt
include/: game.h  ui.h
src/: game.cc  game.cpp  main.cc  main.cpp  ui.cc
